2008-04-21  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Maciej.

        Add support for variable declarations in eval code.

        * VM/CodeBlock.h:
        (KJS::EvalCodeBlock::EvalCodeBlock):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::CodeGenerator):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::Machine::execute):
        * VM/Machine.h:
        * kjs/function.cpp:
        (KJS::globalFuncEval):
        * kjs/nodes.cpp:
        (KJS::EvalNode::generateCode):
        * kjs/nodes.h:
        (KJS::EvalNode::):

2008-04-20  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Throw exceptions for invalid continue, break, and return statements.

        Simple refactoring and extension of Cameron's AssignErrorNode, etc patch

        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::CodeGenerator):
        (KJS::CodeGenerator::pushJumpContext):
        (KJS::CodeGenerator::popJumpContext):
        (KJS::CodeGenerator::jumpContextForLabel):
        * VM/CodeGenerator.h:
        * kjs/nodes.cpp:
        (KJS::Node::emitThrowError):
        (KJS::ContinueNode::emitCode):
        (KJS::BreakNode::emitCode):
        (KJS::ReturnNode::emitCode):
        * kjs/nodes.h:

2008-04-20  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej Stachowiak.
        
        Removed Machine.cpp from AllInOneFile.cpp, and manually inlined a few
        things that used to be inlined automatically.
        
        1.9% speedup on SunSpider.
        
        My hope is that we'll face fewer surprises in Machine.cpp codegen, now
        that GCC is making fewer decisions. The speedup seems to confirm that.

2008-04-20  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Bug 18642: Iterator context may get placed into the return register, leading to much badness
        <https://bugs.webkit.org/show_bug.cgi?id=18642>
